fix collapsing margin and add padding to bottom of sidebar on mobile

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -5,6 +5,7 @@
 .sidebar {
   background-color: map-get($shades, 1);
   text-align: center;
+  padding-bottom: 1.0625em;
   @media (min-width: 768px) {
     text-align: left;
   }
@@ -26,7 +27,7 @@
 }
 
 .sidebar__section {
-  margin: 3.2em 0;
+  margin-top: 3.2em;
 }
 
 .header,
