--- a/styles.css
+++ b/styles.css
@@ -364,6 +364,7 @@ h6 {
 .sidebar {
   background-color: #303d46;
   text-align: center;
+  padding-bottom: 1.0625em;
 }
 @media (min-width: 768px) {
   .sidebar {
@@ -387,7 +388,7 @@ h6 {
 }
 
 .sidebar__section {
-  margin: 3.2em 0;
+  margin-top: 3.2em;
 }
 
 .header,
